force-app/main/default/objects/APT_Charge_Code__c/APT_Charge_Code__c.object-meta.xml
<CustomObject>
    <label>Charge Code</label>
    <nameField>
        <displayFormat>ChargeCode-{0000}</displayFormat>
        <label>Charge Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>