force-app/main/default/objects/APT_Charge_Code__c/fields/APT_Charge_Code_C2__c.field-meta.xml
<CustomField>
    <fullName>APT_Charge_Code_C2__c</fullName>
    <label>Charge Code C2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>