force-app/main/default/objects/APT_Charge_Code__c/fields/APT_Consignment_Pricing__c.field-meta.xml
<CustomField>
    <fullName>APT_Consignment_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consignment Pricing</label>
    <type>Checkbox</type>
</CustomField>