force-app/main/default/objects/APT_Charge_Code__c/fields/APT_Network_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Network_Type__c</fullName>
    <label>Network Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>