force-app/main/default/objects/APT_Charge_Code__c/fields/APT_Price_Structure__c.field-meta.xml
<CustomField>
    <fullName>APT_Price_Structure__c</fullName>
    <label>Price Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WINE {Z20}</fullName>
            </value>
            <value>
                <fullName>WINE {Z30}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z30}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z40}</fullName>
            </value>
            <value>
                <fullName>BASE+PER_KG {Z20}</fullName>
            </value>
            <value>
                <fullName>BASE+PER_KG {Z30}</fullName>
            </value>
            <value>
                <fullName>BASE+PER_KG {Z40}</fullName>
            </value>
            <value>
                <fullName>BANDED SPECIAL EXPRESS {Z40}</fullName>
            </value>
            <value>
                <fullName>0.5KG SATCHEL {Z00}</fullName>
            </value>
            <value>
                <fullName>0.5KG SATCHEL {Z20}</fullName>
            </value>
            <value>
                <fullName>0.5KG SATCHEL {Z30}</fullName>
            </value>
            <value>
                <fullName>0.5KG SATCHEL {Z40}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z20}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z50}</fullName>
            </value>
            <value>
                <fullName>1KG SATCHEL {Z30}</fullName>
            </value>
            <value>
                <fullName>1KG SATCHEL {Z40}</fullName>
            </value>
            <value>
                <fullName>BASE+PER_KG {Z50}</fullName>
            </value>
            <value>
                <fullName>WINE {Z40}</fullName>
            </value>
            <value>
                <fullName>3KG SATCHEL {Z00}</fullName>
            </value>
            <value>
                <fullName>3KG SATCHEL {Z20}</fullName>
            </value>
            <value>
                <fullName>3KG SATCHEL {Z30}</fullName>
            </value>
            <value>
                <fullName>3KG SATCHEL {Z40}</fullName>
            </value>
            <value>
                <fullName>5KG SATCHEL {Z00}</fullName>
            </value>
            <value>
                <fullName>5KG SATCHEL {Z20}</fullName>
            </value>
            <value>
                <fullName>5KG SATCHEL {Z30}</fullName>
            </value>
            <value>
                <fullName>5KG SATCHEL {Z40}</fullName>
            </value>
            <value>
                <fullName>BANDED WINE {Z40}</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>