force-app/main/default/objects/APT_Charge_Code__c/fields/APT_Signature__c.field-meta.xml
<CustomField>
    <fullName>APT_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature</label>
    <type>Checkbox</type>
</CustomField>