force-app/main/default/objects/APT_Charge_Code__c/fields/APT_Weight_Measure__c.field-meta.xml
<CustomField>
    <fullName>APT_Weight_Measure__c</fullName>
    <label>Weight Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CUBIC</fullName>
            </value>
            <value>
                <fullName>DEADWEIGHT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>