force-app/main/default/objects/APT_Charge_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APT_Charge_Code__c</columns>
    <columns>APT_Charge_Code_C1__c</columns>
    <columns>APT_Charge_Code_C2__c</columns>
    <columns>APT_Charge_Code_C3__c</columns>
    <columns>APT_Charge_Code_C4__c</columns>
    <columns>APT_Network_Type__c</columns>
    <columns>APT_Price_Structure__c</columns>
    <columns>APT_Weight_Measure__c</columns>
    <columns>APT_Consignment_Pricing__c</columns>
    <columns>APT_Signature__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>