force-app/main/default/objects/APT_Charge_Code__c/listViews/BANDED_Z40.listView-meta.xml
<ListView>
    <fullName>BANDED_Z40</fullName>
    <columns>APT_Charge_Code__c</columns>
    <columns>APT_Consignment_Pricing__c</columns>
    <columns>APT_Signature__c</columns>
    <columns>APT_Network_Type__c</columns>
    <columns>APT_Price_Structure__c</columns>
    <columns>APT_Weight_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_Price_Structure__c</field>
        <operation>equals</operation>
        <value>BANDED {Z40}</value>
    </filters>
    <label>BANDED {Z40}</label>
</ListView>