force-app/main/default/objects/APT_Charge_Code__c/listViews/Personal_View_SC.listView-meta.xml
<ListView>
    <fullName>Personal_View_SC</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>APT_Charge_Code__c</columns>
    <columns>APT_Weight_Measure__c</columns>
    <columns>APT_Consignment_Pricing__c</columns>
    <columns>APT_Network_Type__c</columns>
    <columns>APT_Price_Structure__c</columns>
    <columns>APT_Signature__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_Charge_Code__c</field>
        <operation>equals</operation>
        <value>3D55</value>
    </filters>
    <filters>
        <field>APT_Charge_Code__c</field>
        <operation>equals</operation>
        <value>3D05</value>
    </filters>
    <label>Personal View SC</label>
    <sharedTo>
        <role>Business_Reporting</role>
    </sharedTo>
</ListView>