force-app/main/default/objects/APT_Charge_Code__c/listViews/X3D85.listView-meta.xml
<ListView>
    <fullName>X3D85</fullName>
    <columns>NAME</columns>
    <columns>APT_Charge_Code__c</columns>
    <columns>APT_Charge_Code_C1__c</columns>
    <columns>APT_Charge_Code_C2__c</columns>
    <columns>APT_Charge_Code_C3__c</columns>
    <columns>APT_Charge_Code_C4__c</columns>
    <columns>APT_Consignment_Pricing__c</columns>
    <columns>APT_Network_Type__c</columns>
    <columns>APT_Price_Structure__c</columns>
    <columns>APT_Signature__c</columns>
    <columns>APT_Weight_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_Charge_Code__c</field>
        <operation>equals</operation>
        <value>3D85,3D55</value>
    </filters>
    <label>3D85</label>
</ListView>