force-app/main/default/objects/APT_Charge_Code__c/listViews/X3J35.listView-meta.xml
<ListView>
    <fullName>X3J35</fullName>
    <columns>APT_Charge_Code__c</columns>
    <columns>APT_Network_Type__c</columns>
    <columns>APT_Price_Structure__c</columns>
    <columns>APT_Weight_Measure__c</columns>
    <columns>APT_Signature__c</columns>
    <columns>APT_Consignment_Pricing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_Charge_Code__c</field>
        <operation>equals</operation>
        <value>3J35</value>
    </filters>
    <label>3J35</label>
</ListView>